Update and rename config_sample.env to config.env

--- a/config.env
+++ b/config.env
@@ -1,22 +1,19 @@
-#Remove this line before deploying
-_____REMOVE_THIS_LINE_____=True
-
 ## Telegram
-BOT_TOKEN = "" # ENTER BOT TOKEN (Get your BOT_TOKEN by talking to @botfather)
-OWNER_ID =
+BOT_TOKEN = "1959393550:AAEdbgqXaGaw5coj1moxgqcDFSFrXvRIbZk" # ENTER BOT TOKEN (Get your BOT_TOKEN by talking to @botfather)
+OWNER_ID = 1317902438
 DOWNLOAD_STATUS_UPDATE_INTERVAL = 5
-AUTO_DELETE_MESSAGE_DURATION = 20
-TELEGRAM_API = 
-TELEGRAM_HASH = ""
+AUTO_DELETE_MESSAGE_DURATION = -1
+TELEGRAM_API = 5621814
+TELEGRAM_HASH = "2a267b331833d03494a8a8433a23b0e0"
 AUTHORIZED_CHATS = "" #Separated by space
-MAX_CONCURRENT_DOWNLOADS = 4
+MAX_CONCURRENT_DOWNLOADS = 20
 
 ## Drive
-GDRIVE_FOLDER_ID = ""
-IS_TEAM_DRIVE = ""
-INDEX_URL = ""
+GDRIVE_FOLDER_ID = "1p4oG6A3x7GlR2M63HFEiKHYl1rwr4e-y"
+IS_TEAM_DRIVE = "True"
+INDEX_URL = "https://mirrorx-index.zkt.workers.dev/"
 DOWNLOAD_DIR = "/app/downloads" #   Dont change this if you are using Docker compose
-USE_SERVICE_ACCOUNTS = ""
+USE_SERVICE_ACCOUNTS = "True"
 
 ## Optional config
 UPTOBOX_TOKEN = ""
